# BedrockStarter

./: .clangd  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  launch.sh  setup.sh  start.sh
.github/workflows/: clang-tidy.yml  cpp-tests.yml
scripts/: build-core-plugin.sh  clang-tidy.sh  common.sh  install-cpp-deps.sh  launch.sh  setup.sh  shellcheck.sh  test-cpp.sh  watch-logs.sh
server/api/: Bedrock.php  Request.php  api.php  composer.json  nginx.conf
server/config/: bedrock.service  nginx.conf
server/core/: CMakeLists.txt  Core.cpp  Core.h  Dockerfile  start.sh
server/core/commands/: HelloWorld.cpp  HelloWorld.h
server/core/test/: README.md  TestHelpers.h  main.cpp
server/core/test/tests/: HelloWorldTest.h  MessagesTest.h
